--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "html-to-image": "^1.11.13",
     "react": "17.0.2",
     "react-component-export-image": "1.0.6",
     "react-dom": "17.0.2",
