--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react",
   "version": "1.0.0",
-  "homepage": "https://valuesthroughgitacontest.github.io/valuesthroughgitacontest",
+  "homepage": "https://abhaypatel099.github.io/valuesthroughgitacontest",
   "description": "React example starter project",
   "keywords": [
     "react",
@@ -22,11 +22,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build --legacy -f"
   },
   "browserslist": [
     ">0.2%",
