--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "gh-pages": "^5.0.0",
     "typescript": "4.1.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build --legacy -f"
-  },
+ "scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts --openssl-legacy-provider build",
+  "test": "react-scripts test --env=jsdom",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build --legacy -f"
+},
   "browserslist": [
     ">0.2%",
     "not dead",
