--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react",
   "version": "1.0.0",
-  "homepage": "https://abhaypatel099.github.io/valuesthroughgitacontest",
+  "homepage": ".",
   "description": "React example starter project",
   "keywords": [
     "react",
